@@ -1,11 +1,11 @@
-346600a3d25da08d77165563e9810bd5 *ChangeLog
-04dbc7da9c4776f9e9668e01e5d75830 *DESCRIPTION
+584d1c4a4e04def1d8f81b8e0ea7f87f *ChangeLog
+9adf0172cac736b00c264bb5be049258 *DESCRIPTION
 e011dbc25c97fa96ccf40575988ed852 *NAMESPACE
 0c9008cb11be04f2d73fc012ace594c7 *R/AllClass.R
 6c5d5c0770a6eab23a8599904b6dd776 *R/blmer.R
 3f5f32c08ebb8deafa103e99a73edaab *R/control.R
 6e916dac5c8ef5653c18c17d7104d0e9 *R/devFun.R
-20b0cc8e7cce33f61b2d7c8bf566a5a2 *R/dist.R
+5c573257d3184417ff7e68d6c5d4a71b *R/dist.R
 8a4ff9abb6923d226ebc200bddd87801 *R/dist_custom.R
 eb4462cbfc1f5a605e024a9ea9e693e3 *R/dist_gamma.R
 232455f612c30fd261f40e4999d9bafc *R/dist_horseshoe.R
@@ -24,9 +24,9 @@ eff56bea27e3a1fe2ed0b46a97132d54 *R/parameters.R
 6f7a24a171895cd167d92dce6ee2dc70 *inst/common/checkWarning.R
 cd4c9728d3ce9acbac622559c57e1224 *inst/common/glmmData.R
 5b5b5d726ca3f2139eb91fbeca696d1b *inst/common/lmmData.R
-114ce4c2e1ea56bdd3dc27765cad61d0 *man/blmer.Rd
-7d67715c393dbf50cb59ed2db1ad995a *man/bmerDist-class.Rd
-50101bfe271bb70f1c71aa53062eeb33 *man/bmerMod-class.Rd
+22c5f247ae120c68aea137d9e32b4644 *man/blmer.Rd
+b3e8438e901b5a32605cf54d7332dca5 *man/bmerDist-class.Rd
+889164ac4fca90991c1c3f1e7eff7880 *man/bmerMod-class.Rd
 ec4ab5f4a812c5d7e62329b2decffce8 *tests/test-all.R
 e9d84cb2aefec2c5aadbdef804f0b3c9 *tests/testthat/test-01-lmm.R
 03c7a1b6f390dd599dfa2cee0191811d *tests/testthat/test-02-glmm.R
@@ -34,7 +34,8 @@ e9d84cb2aefec2c5aadbdef804f0b3c9 *tests/testthat/test-01-lmm.R
 620ffe4c45fcdbfd9da4985d5f5ce01b *tests/testthat/test-04-fixef_errors.R
 df20eec483386f2095be88981173c474 *tests/testthat/test-05-covariance_errors.R
 3fc29a8fb877b3b4f6695fcb037952f8 *tests/testthat/test-06-lmm_resid.R
-84c3636f73edf9321c4e28c362fc9047 *tests/testthat/test-07-lmm_fixef.R
+b63d18f8d56a0615c77fb9d4087690ce *tests/testthat/test-07-lmm_fixef.R
 04847d96b33c1e77dd5084aa697f38cd *tests/testthat/test-08-lmm_covariance.R
-9ace324ec42a6e6de196e18d171b9e21 *tests/testthat/test-09-glmm_priors.R
+f1d5d7aa3501d7b78ff4eb5749813ade *tests/testthat/test-09-glmm_priors.R
 f37cbc37d580ae1c2c2db8cbd038fa5d *tests/testthat/test-10-refit.R
+884a22956c93fc4a4f73f32572b8b1f9 *tests/testthat/test-11-prior_parse.R
