@@ -1,3 +1,11 @@
+2024-09-06 Vincent Dorie <vdorie@gmail.com>
+
+  * Fix for custom priors not being able to find variables when blmer is executed in functions. Bug report thanks to Jacob Grytzka.
+
+2021-03-07 Vincent Dorie <vdorie@gmail.com>
+
+  * Fix for custom covariance priors in glmm setting not working. Bug report thanks to mgoplerud.
+
 2020-11-02 Vincent Dorie <vdorie@gmail.com>
 
   * Fix for programmatically defined variables not working with glmm priors. Bug fix thanks to mgoplerud.
